<resources>
    <string name="app_name">Music Player</string>
    <string name="bottom_bar_music">Music</string>
    <string name="bottom_bar_identify">Identify</string>
    <string name="bottom_bar_serach">Search</string>
    <string name="albums">Albums</string>
    <string name="playlists">Playlists</string>
    <string name="genres">Genres</string>
    <string name="artists">Artists</string>
    <string name="tracks">Tracks</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_current_playing">CurrentPlaying</string>
    <string name="title_activity_ultimate">UltimateActivity</string>

</resources>
