<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MusicFragment">

    <android.support.design.widget.TabLayout
        android:id="@+id/music_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="@color/Black"
        app:tabTextColor="@color/Grey">

        <android.support.design.widget.TabItem
            android:id="@+id/albums"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/albums" />

        <android.support.design.widget.TabItem
            android:id="@+id/artists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artists" />

        <android.support.design.widget.TabItem
            android:id="@+id/genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genres" />

        <android.support.design.widget.TabItem
            android:id="@+id/tracks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tracks" />

        <android.support.design.widget.TabItem
            android:id="@+id/playlists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlists" />

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/music_tab_layout">
    </android.support.v4.view.ViewPager>


</RelativeLayout>